--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -20,15 +20,67 @@
   </head>
   <body>
 <ul class="nav nav-pills">
-  <li role="presentation"><a href="#">PyBursa</a></li>
-  <li role="presentation" class="active"><a href="{% url 'index' %}">Main</a></li>
+  <li role="presentation"><a href="{% url 'index' %}">PyBursa</a></li>
+  <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
   <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
-  <li role="presentation"><a href={% url 'students:list_view' %}?course_id={{ courses.id }}>Students</a></li>
+  <li role="presentation"><a href="{% url 'students:list_view' %}?course_id={{ courses.id }}">Students</a></li>
 </ul>
 <div class="container">
 <div class="jumbotron">
   <h2>{{ courses.name }}</h2>
   <p>{{ courses.description }}</p>  
+</div>
+</div>
+
+<div class="container">
+<div class="table-responsive">
+<h3> Course Tutors </h3>     
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Coach</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody> 
+      {% for coach in coaches %}
+      {% if courses.coach.first_name == coach.first_name %}
+      <tr>  
+        <td> <a href="{% url 'coaches:detail' coach.id %}">{{ coach.first_name }} {{ coach.last_name }}</a></td>
+      </tr>
+      <tr>
+        <td> {{ coach.description }} </td>
+      </tr>
+      {% endif %}
+      {% endfor %}     
+    </tbody>    
+  </table>
+</div>
+</div>
+
+<div class="container">
+<div class="table-responsive">
+<h3> Course Assistant </h3>     
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Assistant</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody> 
+      {% for coach in coaches %}
+      {% if courses.assistant.first_name == coach.first_name %}
+      <tr>  
+        <td><a href="{% url 'coaches:detail' coach.id %}">{{ coach.first_name }} {{ coach.last_name }}</a></td>
+      </tr>
+      <tr>        
+          <td>{{ coach.description }}</td>    
+      </tr>
+      {% endif %}
+      {% endfor %}     
+    </tbody>    
+  </table>
 </div>
 </div>
 
