--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -28,6 +28,20 @@
 							<h1>{{ course.name }}</h1>	
 							<p>{{ course.description }} </p>
 						</div>
+      
+          <div class="container">
+          {% if course.coach%}
+            <p>Coaches</p>
+            <p><a href={% url 'coaches:detail' course.coach.id%}>{{course.coach.user.username}}</a></p>
+          {% endif %}
+
+          {% if course.assistant%}
+            <p>Assistants</p>
+            <p><a href={% url 'coaches:detail' course.assistant.id%}>{{course.assistant.user.username}}</a></p>
+          {% endif %}
+          
+          </div>
+
 						<p>Course plan</p>
 						<table>
 							<thead>
