--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -32,6 +32,26 @@
 
     <hr>
 
+  <div class="learn-more">
+    <div class="container">
+      <div class="row">
+        <h1>COACHES</h1>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Coach</h2>
+          <p><a href="{% url 'coaches:detail' course.coach.id %}">{{ coach }}</a></p>
+            <p>{{ course.coach.description }}</p>
+        </div>
+
+        <div class="col-md-4">
+          <h2>Assistant</h2>
+          <p><a href="{% url 'coaches:detail' course.assistant.id %}">{{ assistant }}</a></p>
+            <p>{{ course.assistant.description }}</p>
+        </div>
+    </div>
+
     <div class="learn-more">
       <div class="container">
         <div class="row">
