--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Detail</title>
+    <title>{{student.name}} {{student.surname}}</title>
     {% load staticfiles %}
     <script src="{% static 'js/bootstrap.js' %}"> </script>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
