--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Courses</title>
+    <title>{{course.name}}</title>
     {% load staticfiles %}
     <script src="{% static 'js/bootstrap.js' %}"> </script>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
@@ -24,7 +24,8 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="{% url 'index' %}">Главная</a></li>
                     <li><a href="{% url 'contact' %}">Контакты</a></li>
-                    <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
+                    <li><a href="{% url 'students:list_view' %}"
+                    ?course_id={{course.id}}>Студенты</a></li>
                 </ul>
             </div>
         </div>
@@ -35,25 +36,35 @@
             {% block content %}
             <h2 class="descr">{{ course.name }} Описание курса</h2>
             <p class="descr">{{ course.description }}</p>
-            <h2 class="descr">План курса</h2>
-            <table class="table table-striped table table-bordered">
-                <thead>
-                    <tr>
+        </div>
+        <div class= "jumbotron container">
+            <h2>Teachers</h2> 
+            <h3>Coach</h3>
+            <h4><a href={% url 'coaches:detail' coach.id %}>{{coach.full_name}}</a></h4>
+            <h6>{{coach.description}}</h6>
+            <h3>Assistant</h3>
+            <h4><a href={% url 'coaches:detail' assistant.id %}>{{assistant.full_name}}</a></h4>
+            <h6>{{assistant.description}}</h6>
+        </div>
+        <h2 class="descr">План курса</h2>
+        <table class="table table-striped table table-bordered">
+            <thead>
+                <tr>
                     <th>#</th>
                     <th>Тема</th>
                     <th>Описание</th>
-                    </tr>
-                </thead>
-                <tbody>   
-                    {% for lesson in lessons%}
-                        <tr>
-                            <td>{{ lesson.order }}</td>
-                            <td>{{ lesson.subject }}</td>
-                            <td>{{ lesson.description }}</td>
-                        </tr>
-                    {% empty %}
-                        <h3>Not found!</h3>
-                    {% endfor %}
+                </tr>
+            </thead>
+            <tbody>   
+            {% for lesson in lessons%}
+                <tr>
+                    <td>{{ lesson.order }}</td>
+                    <td>{{ lesson.subject }}</td>
+                    <td>{{ lesson.description }}</td>
+                </tr>
+                {% empty %}
+                <h3>Not found!</h3>
+                {% endfor %}
                 </tbody>
             </table>
             {% endblock %}
