--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Students</title>
+    <title>Students {{course.name}}</title>
     {% load staticfiles %}
     <script src="{% static 'js/bootstrap.js' %}"> </script>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
@@ -32,7 +32,7 @@
     <div class="jumbotron">
         <h2 class="descr">ITBursa</h2>
     </div>
-    <h3>Список студентов</h3>
+    <h3>Список студентов {{course.name}}</h3>
     <table class="table table-striped table table-bordered">
         <thead>
         <tr>
@@ -44,13 +44,13 @@
         </thead>
         <tbody>   
         {% for student in students %}
-        <tr>
-          <td><a class="table" href="{% url 'students:list_view' %}{{ student.id }}">{{ student.surname }} {{ student.name }}</a></td>
-          <td>{{ student.address }}</td>
-          <td>{{ student.skype }}</td>
-          <td>{% for course in student.courses.all %}
+            <tr>
+              <td><a class="table" href="{% url 'students:list_view' %}{{ student.id }}">{{ student.surname }} {{ student.name }}</a></td>
+              <td>{{ student.address }}</td>
+              <td>{{ student.skype }}</td>
+              <td>{% for course in student.courses.all %}
 
-          <a  class="table" href="{% url 'courses:detail' course.id %}">{{ course }}</a><br>
+              <a  class="table" href="{% url 'courses:detail' course.id %}">{{ course }}</a><br>
           {% endfor %}</td>
         </tr>
         {% empty %}
