--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -55,51 +55,55 @@
         </div>
       </div>
     </nav>
-
-    <div class="container theme-showcase" role="main">
+    
+     <div class="container theme-showcase" role="main">
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         
       </div>
-      <h1 class="course">Ooniversity</h1>
-             {% block content %}
-              <h2 class="course">{{ course.name }} course details</p>
-              <p class="course">{{ course.description }}</h3>
-              <h2 class="course">Course plan</h3>
-              <br>
-              <div text-align='center'>
-			    <h2 align="center">Teacher</h2>
-			    <h3 align="center"><a href="{% url 'coaches:detail' %}">{{ coach }}</a></h3>
-			    <h2 align="center">Assistant</h2>
-			    <h3 align="center"><a href="{% url 'coaches:detail' %}">{{ assistant }}</a></h3>
-			  </div>
-              <table class="table table-striped table table-bordered">
-                <thead>
-                  <tr>
-                    <th>No</th>
-                    <th>Lesson</th>
-                    <th>Description</th>
-                  </tr>
-                </thead>
-                <tbody>   
-				  {% for lesson in lessons%}
-                    <tr>
-                      <td>{{ lesson.order }}</td>
-                      <td>{{ lesson.subject }}</td>
-                      <td>{{ lesson.description }}</td>
-                    </tr>
-                  {% empty %}
-                    <h3>Not found!</h3>
-                  {% endfor %}
-                </tbody>
-              </table>
-              </br>
-        {% endblock %}
-      
-      
-    </div>
-    
-   <!-- Site footer -->
+
+			<h2 align="center">Преподователь курса</h2>
+			<h3 align="center">{{ coach.full_name }}</h3>
+			<div class='grey'>
+				<table class='table'>
+					<tr><th>Date of birth</th><th>{{ coach.date_of_birth }}</th></tr>
+					<tr><th>Address</th><th>{{ coach.address }}</th></tr>
+					<tr><th>Email</th><th>{{ coach.email }}</th></tr>
+					<tr><th>Skype</th><th>{{ coach.skype }}</th></tr>
+					<tr><th>Phone number</th><th>{{ coach.phone }}</th></tr>
+					{% if course_coach %}
+						<tr>
+							<th>Преподователь на курсе</th>
+							<th>
+								{% for course in  course_coach %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> Cтуденты курса
+								<a href="{% url 'students:list_view' %}?course_id={{ course.id }}">
+									<button type="button" class="btn btn-default" aria-label="Left Align">
+  										<span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+									</button>
+								</a>
+								{% endfor %}
+							</th>
+						</tr>
+					{% endif %}
+					{% if course_assistant %}
+						<tr>
+							<th>Ассистент на курсе</th>
+							<th>
+								{% for course in  course_assistant %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> Cтуденты курса
+								<a href="{% url 'students:list_view' %}?course_id={{ course.id }}">
+									<button type="button" class="btn btn-default" aria-label="Left Align">
+  										<span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+									</button>
+								</a>
+								{% endfor %}
+							</th>
+						</tr>
+					{% endif %}
+				</table>
+			</div>
+		</div>
+   
+    <!-- Site footer -->
     <div class="navbar navbar-inverse navbar-fixed-bottom">
       <div class="col-sm-3 col-sm-offset-5">
         <a class="navbar-brand" href="https://www.youtube.com/watch?v=KxmLNctBi10">&copy; PyBursa 2015</a>
@@ -113,8 +117,6 @@
         </p>
       </div>
     </div>
-    
-    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
