--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -5,8 +5,8 @@
     <title>Students {{course.name}}</title>
     {% load staticfiles %}
     <script src="{% static 'js/bootstrap.js' %}"> </script>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href={% static 'css/bootstrap.css' %}>
+    <link rel="stylesheet" href={% static 'css/style.css' %}>
 </head>
 <body>
     <nav class="navbar navbar-fixed-top navbar-inverse">
@@ -22,9 +22,9 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'index' %}">Главная</a></li>
-                    <li><a href="{% url 'contact' %}">Контакты</a></li>
-                    <li class="active"><a href="{% url 'students:list_view' %}">Студенты</a></li>
+                    <li><a href={% url 'index' %}>Главная</a></li>
+                    <li><a href={% url 'contact' %}>Контакты</a></li>
+                    <li class="active"><a href={% url 'students:list_view' %}>Студенты</a></li>
                 </ul>
             </div>
         </div>
@@ -45,12 +45,12 @@
         <tbody>   
         {% for student in students %}
             <tr>
-              <td><a class="table" href="{% url 'students:list_view' %}{{ student.id }}">{{ student.surname }} {{ student.name }}</a></td>
+              <td><a class="table" href={% url 'students:list_view' %}{{ student.id }}>{{ student.surname }} {{ student.name }}</a></td>
               <td>{{ student.address }}</td>
               <td>{{ student.skype }}</td>
               <td>{% for course in student.courses.all %}
 
-              <a  class="table" href="{% url 'courses:detail' course.id %}">{{ course }}</a><br>
+              <a  class="table" href={% url 'courses:detail' course.id %}>{{ course }}</a><br>
           {% endfor %}</td>
         </tr>
         {% empty %}
@@ -63,6 +63,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src={% static 'js/bootstrap.js' %}></script>
 </body>
 </html>
