--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -58,49 +58,55 @@
     
      <div class="container theme-showcase" role="main">
       <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        
-      </div>
-
-			<h2 align="center">Преподователь курса</h2>
-			<h3 align="center">{{ coach.full_name }}</h3>
-			<div class='grey'>
-				<table class='table'>
-					<tr><th>Date of birth</th><th>{{ coach.date_of_birth }}</th></tr>
-					<tr><th>Address</th><th>{{ coach.address }}</th></tr>
-					<tr><th>Email</th><th>{{ coach.email }}</th></tr>
-					<tr><th>Skype</th><th>{{ coach.skype }}</th></tr>
-					<tr><th>Phone number</th><th>{{ coach.phone }}</th></tr>
-					{% if course_coach %}
-						<tr>
-							<th>Преподователь на курсе</th>
-							<th>
-								{% for course in  course_coach %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> Cтуденты курса
-								<a href="{% url 'students:list_view' %}?course_id={{ course.id }}">
-									<button type="button" class="btn btn-default" aria-label="Left Align">
-  										<span class="glyphicon glyphicon-check" aria-hidden="true"></span>
-									</button>
-								</a>
-								{% endfor %}
-							</th>
-						</tr>
-					{% endif %}
-					{% if course_assistant %}
-						<tr>
-							<th>Ассистент на курсе</th>
-							<th>
-								{% for course in  course_assistant %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> Cтуденты курса
-								<a href="{% url 'students:list_view' %}?course_id={{ course.id }}">
-									<button type="button" class="btn btn-default" aria-label="Left Align">
-  										<span class="glyphicon glyphicon-check" aria-hidden="true"></span>
-									</button>
-								</a>
-								{% endfor %}
-							</th>
-						</tr>
-					{% endif %}
-				</table>
-			</div>
+      <br><br>
+      <div class="row">
+        <div class="col-sm-8">
+          <h2>{{ coach.full_name }}</h2>
+            <table class="table table-striped table table-bordered">
+            <tr><td>Date of birth</td><td>{{ coach.date_of_birth }}</td></tr>
+            <tr><td>Address</td><td>{{ coach.address }}</td></tr>
+            <tr><td>Email</td><td>{{ coach.email }}</td></tr>
+            <tr><td>Skype</td><td>{{ coach.skype }}</td></tr>
+            <tr><td>Phone number</td><td>{{ coach.phone }}</td></tr>
+            {% if course_coach %}
+            <tr>
+              <td>
+                Teacher for cources
+              </td>
+              <td>
+              {% for course in  course_coach %}
+              <a  class="table"href="{% url 'courses:detail' course.id %}">{{ course.name }}</a>
+                students
+              <a class="table" href="{% url 'students:list_view' %}?course_id={{ course.id }}">
+                <button type="button" class="btn btn-xs" aria-label="Left Align">
+                <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+                </button><br>
+              </a>
+              {% endfor %}
+              </td>
+            </tr>
+              {% endif %}
+              {% if course_assistant %}
+            <tr>
+              <td>
+                Assistant for cources
+              </th>
+              <td>
+                {% for course in  course_assistant %}
+              <a class="table" href="{% url 'courses:detail' course.id %}">{{ course.name }}</a>
+                students
+              <a class="table" href="{% url 'students:list_view' %}?course_id={{ course.id }}">
+                <button type="button" class="btn btn-xs" aria-label="Left Align">
+                <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+              </button><br>
+                </a>
+              {% endfor %}
+              </td>
+            </tr>
+            {% endif %}
+            </table>
+            </div>
+		  </div>
 		</div>
    
     <!-- Site footer -->
