--- a/templates/contact.html
+++ b/templates/contact.html
@@ -48,7 +48,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="{% url 'index' %}">Main</a></li>
-            <li class="/active/"><a href="{% url 'contact' %}">Contacts</a></li>
+            <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
             <li><a href="{% url 'students:list_view' %}">Students</a></li>
             <li><a href="{% url 'equation' %}">Equotion</a></li>
           </ul>
