--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -31,6 +31,7 @@
     </nav>
     <div class="container theme-showcase">
         <div class="jumbotron">
+        <h2> {{ student.surname }} {{ student.name }}</h2>
         </div>
         <table class="table">
         <tr>
