--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -7,10 +7,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
-    <title>Main</title>
+    <title>Teacher {{teacher.full_name}}</title>
     {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href={% static 'css/bootstrap.css' %} rel="stylesheet">
+    <link href={% static 'css/style.css' %} rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-fixed-top navbar-inverse">
@@ -36,33 +36,49 @@
   	<div class="container theme-showcase">
       <div class="jumbotron">
         <div>
-          <h2>Добро пожаловать в ITBursa</h2>
-          <p class="about">Мы специализируемся на модных языках программирования. Принципиальное наше отличие от других курсов - максимум практики и жесткая система обязательных домашних заданий.
-          </p>
-          <h3 class="descr">Выбирай на каком курсе ты хочешь учится!</h3>
-          <div class="bs-example" data-example-id="simple-table">
-          <table class="table table-striped table table-bordered">
-            <caption>Список курсов</caption>
-            <thead>
-              <tr>
-                <th>Курс</th>
-                <th>Описание</th>
-              </tr>
-            </thead>
-            <tbody>
-            {% for course in courses %}
-              <tr>
-                <th scope="row"><a class="table" href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></th>
-                <td>{{ course.short_description }}</td>
-              </tr>
-            {% endfor %}
-            </tbody>
-          </table>
+          <h2>{{teacher.full_name}}</h2>
+        <table class="table">
+      <tbody>
+        <tr>
+          <td>Birth Date</td>
+          <td>{{teacher.date_of_birth}}</td>
+        </tr>
+        <tr>
+          <td>Address</td>
+          <td>{{teacher.address}}</td>
+        </tr>
+        <tr>
+          <td>Email</td>
+          <td>{{teacher.email}}</td>
+        </tr>
+        <tr>
+          <td>Skype</td>
+          <td>{{teacher.skype}}</td>
+        </tr>
+        <tr>
+          <td>Phone</td>
+          <td>{{teacher.phone}}</td>
+        </tr>
+        <tr>
+          <td>Courses as Coach</td>
+          <td>
+          {% for course in course_coach %}
+            <a href={% url 'courses:detail' course.id %}>{{course.name}} <a href={% url 'students:list_view'%}?course_id={{course.id}}><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a></a>
+          {% endfor %}
+          </td>
+        </tr>
+        <tr>
+          <td>Courses as Assistent</td>
+          <td>
+          {% for course in course_assistent %}
+            <a href={% url 'courses:detail' course.id %}>{{course.name}} <a href={% url 'students:list_view'%}?course_id={{course.id}}><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a></a>
+          {% endfor %}
+          </td>
+        </tr>     
+      </tbody>
+    </table>  
         </div>
-        </div>
-      </div>
 
-          <hr>
           <hr>
 
       <footer class="footer">
