--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -79,7 +79,7 @@
                 students
               <a class="table" href="{% url 'students:list_view' %}?course_id={{ course.id }}">
                 <button type="button" class="btn btn-xs" aria-label="Left Align">
-                <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
                 </button><br>
               </a>
               {% endfor %}
@@ -97,7 +97,7 @@
                 students
               <a class="table" href="{% url 'students:list_view' %}?course_id={{ course.id }}">
                 <button type="button" class="btn btn-xs" aria-label="Left Align">
-                <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
               </button><br>
                 </a>
               {% endfor %}
