--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -90,6 +90,7 @@
               </div>
             </div>
           </div>
+          <h2 class="course">Course plan</h3>
           <div class="row">
             <div class="col-sm-8">
               <table class="table table-striped table table-bordered">
