--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -27,8 +27,8 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url 'index' %}">Главная</a></li>
-            <li><a href="{% url 'contact' %}">Контакты</a></li>
-            <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
+            <li><a href={% url 'contact' %}>Контакты</a></li>
+            <li><a href={% url 'students:list_view' %}>Студенты</a></li>
           </ul>
         </div>
       </div>
