--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -22,10 +22,9 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="{% url 'index' %}">Главная</a></li>
-                    <li><a href="{% url 'contact' %}">Контакты</a></li>
-                    <li><a href="{% url 'students:list_view' %}"
-                    ?course_id={{course.id}}>Студенты</a></li>
+                    <li class="active"><a href={% url 'index' %}>Главная</a></li>
+                    <li><a href={% url 'contact' %}>Контакты</a></li>
+                    <li><a href={% url 'students:list_view' %}?course_id={{course.id}}>Студенты</a></li>
                 </ul>
             </div>
         </div>
@@ -40,11 +39,11 @@
         <div class= "jumbotron container">
             <h2>Teachers</h2> 
             <h3>Coach</h3>
-            <h4><a href="{% url 'coaches:detail' coach_id %}">{{ coach }}</a></h4>
-            <h6>{{coach.description}}</h6>
+            <h4><a href={% url 'coaches:detail' coach_id %}>{{ coach }}</a></h4>
+            <h6>{{course.coach.description}}</h6>
             <h3>Assistant</h3>
-            <h4><a href="{% url 'coaches:detail' assistant_id %}">{{ assistant }}</a></h4>
-            <h6>{{assistant.description}}</h6>
+            <h4><a href={% url 'coaches:detail' assistant_id %}>{{ assistant }}</a></h4>
+            <h6>{{course.assistant.description}}</h6>
         </div>
         <h2 class="descr">План курса</h2>
         <table class="table table-striped table table-bordered">
@@ -76,6 +75,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src={% static 'js/bootstrap.js' %}></script>
 </body>
 </html>
