--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
     <title>Main</title>
     {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href={% static 'css/bootstrap.css' %} rel="stylesheet">
+    <link href={% static 'css/style.css' %} rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-fixed-top navbar-inverse">
@@ -27,8 +27,8 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url 'index' %}">Главная</a></li>
-            <li><a href="{% url 'contact' %}">Контакты</a></li>
-            <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
+            <li><a href={% url 'contact' %}>Контакты</a></li>
+            <li><a href={% url 'students:list_view' %}>Студенты</a></li>
           </ul>
         </div>
       </div>
@@ -71,7 +71,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src={% static 'js/bootstrap.js' %}></script>
        
   </body>
 </html>
