--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>{{student.name}} {{student.surname}}</title>
     {% load staticfiles %}
-    <script src="{% static 'js/bootstrap.js' %}"> </script>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script src={% static 'js/bootstrap.js' %}> </script>
+    <link rel="stylesheet" href={% static 'css/bootstrap.css' %}>
+    <link rel="stylesheet" href={% static 'css/style.css' %}>
 </head>
 <body>
     <nav class="navbar navbar-fixed-top navbar-inverse">
