Edited file KR6

--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -42,6 +42,13 @@
       </div>
     </nav>
     <!-- menu end --> 
+    <div class="panel panel-default">
+
+    <!-- Default panel contents -->
+    <div class="panel-heading">Students of ITBursa-2015</div>
+    <div class="panel-body">
+      <p>This list provides extra references and information for students.</p>
+    
     <div class="slash-div">
     <h2> Student's list: </h2>
     <br>
@@ -75,6 +82,7 @@
             </tbody>
         </table>
       </div>        
+    </div>
     </div>
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
