--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -29,7 +29,7 @@
     <br>
         <div class="panel panel-success">
             <div class="panel-heading">
-                <h3 class="panel-title">Teacher</h3>
+                <h3 class="panel-title">Сoach</h3>
             </div>
             <div class="panel-body">
               <a href="{% url 'coaches:detail' course_detail.coach.id %}"> {{ course_detail.coach.user.first_name }}  {{ course_detail.coach.user.last_name }} </a> <br><br>
