--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ITBursa detail</title>
+    <title>ITBursa coaches detail</title>
     <style> 
       body{background-image: url('../static/images/pic4.jpg') !important;
       background-repeat: none; 
@@ -42,6 +42,8 @@
       </div>
     </nav>
     <!-- menu end --> 
+    <img src="{% static 'images/pic4.jpg' %}" width="500px" height="200px">
+    <br> </br> 
     <div class="slash-div">
   
        <div class="panel panel-primary">
