--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ITBursa detail</title>
+    <title>ITBursa courses detail</title>
     <style> 
       body{background-image: url('../static/images/pic4.jpg') !important;
       background-repeat: none; 
@@ -21,6 +21,28 @@
   </head>
   <body>
     <!-- menu start -->   
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url 'index' %}">ITBursa-2015</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="{% url 'index' %}">Main</a></li>
+            <li><a href="{% url 'contact' %}">Contacts</a></li>
+            <li><a href="{% url 'students:list_view' %}">Students</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- menu end --> 
+    <img src="{% static 'images/pic2.jpg' %}" width="500px" height="200px">   
     <div class="slash-div">
     <h2> {{ course_detail.name }} </h2>
     {{ course_detail.description }}
