--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -42,6 +42,7 @@
       </div>
     </nav>
     <!-- menu end --> 
+    <img src="{% static 'images/img1.gif' %}" width="100px" height="100px"> 
     <div class="slash-div">
     <h2> {{ student_detail.full_name }} <br>
     <small>student's card </small></h2>
