--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ITBursa detail</title>
+    <title>ITBursa list</title>
     <style> 
       body{background-image: url('../static/images/pic4.jpg') !important;
       background-repeat: none; 
