--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -29,15 +29,18 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="hero-unit">
+			<div class="jumbotron">
 				<h1>{{ course.name }}</h1>
 				<p>{{ course.description }}</p>
 			</div>
-			
-			<div class="col-md-10 col-md-push-1">
-				<h2 class="sub-header">Преподаватели</h2>
-				<div class="table-responsive">
-					<table class="table" border=2>
+		</div>
+		<div class="container">
+			<div class="page-header">
+				<h2>Преподаватели</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-7">
+					<table class="table table-striped">
 						<thead>
 						  <tr>
 								<th>Учитель</th>
@@ -52,7 +55,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<table class="table" border=2>
+					<table class="table table-striped">
 						<thead>
 						  <tr>
 								<th>Ассистент</th>
@@ -69,11 +72,14 @@
 					</table>
 				</div>
 			</div>
-							
-			<div class="col-md-10 col-md-push-1">
-				<h2 class="sub-header">План Курса</h2>
-				<div class="table-responsive">
-					<table class="table" border=2>
+		</div>	
+		<div class="container">
+			<div class="page-header">
+				<h2>План Курса</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-7">
+					<table class="table table-striped">
 						<thead>
 						  <tr>
 								<th>#</th>
