--- a/templates/index.html
+++ b/templates/index.html
@@ -29,14 +29,16 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="hero-unit">
+			<div class="jumbotron">
 				<h1>IT-Bursa</h1>
 				<p>Курсы ItBursa начали работу в 2014 году. Мы специализируемся на «модных» языках программирования. Принципиальное наше отличие от других курсов – максимум практики и жесткая система обязательных домашних заданий. Преподаватели – опытные практикующие разработчики, они помогают участникам в ходе курсов создать реальные проекты и получить практические навыки, применимые к работе. Домашние задания на наших курсах обязательны и их невыполнение приводит к исключению с курсов. Таким образом, мы готовим не просто «слушателей» курсов, а настоящих специалистов, способных создавать пусть простые, но рабочие проекты.</p>
 			</div>
-			<div class="col-md-10 col-md-push-1">
-				<h2 class="sub-header">Выбирайте курс</h2>
-				<div class="table-responsive">
-					<table class="table" border=2>
+			<div class="page-header">
+				<h2>Выбирайте курс</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<table class="table table-striped">
 						<thead>
 						  <tr>
 						    <th>Курс</th>
@@ -56,7 +58,6 @@
 					</table>
 				</div>
 			</div>
-		</div>
 		<script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
