--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -33,13 +33,13 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="hero-unit">
-				<h1>{{student.name}} {{student.surname}}</h1>
+			<div class="page-header">
+				<h2>{{student.name}} {{student.surname}}</h2>
+				<h4>Информация</h4>
 			</div>
-			<div class="col-md-10 col-md-push-1">
-				<h2 class="sub-header">Информация</h2>
-				<div class="table-responsive">
-					<table class="table" border=2>
+			<div class="row">
+				<div class="col-md-7">
+					<table class="table table-striped">
 						<thead>
 						  <tr>
 			        <th>дата рождения</th>
