--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -29,12 +29,12 @@
 			<div>
 		</div>
 		<div class="container">
-			<div class="hero-unit">
+			<div class="page-header">
 				<h1>Список студентов</h1>
 			</div>
-			<div class="col-md-10 col-md-push-1">
-				<div class="table-responsive">
-					<table class="table" border=2>
+			<div class="row">
+				<div class="col-md-12">
+					<table class="table table-striped">
 						<thead>
 						  <tr>
 								<th>#</th>
