--- a/templates/contact.html
+++ b/templates/contact.html
@@ -58,7 +58,7 @@
 	      <div class="caption">
 	        <h3>Director</h3>
 	        <p>Name: Alina Ivanova</p>
-	        <p>Skype: daria</p> 
+	        <p>Skype: daria123</p> 
 	        <p>Phone: (123) 456-7890</p>
 	        <p><a href="{% static 'images/pic6.jpg' %}" class="btn btn-primary" role="button">Contact</a> 
 	      </div>
