--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -26,8 +26,8 @@
         "#navbar" data-toggle="collapse" type="button"><span class=
         "sr-only">Toggle navigation</span> <span class="icon-bar"></span>
         <span class="icon-bar"></span> <span class="icon-bar"></span></button>
-        <img hspace="10" src="{% static 'images/python-128.png' %}" vspace="10"
-        width="30"></div>
+        <a href="{% url 'index' %}"><img hspace="10" src="{% static 'images/python-128.png' %}" vspace="10"
+        width="30"></a></div>
         <div class="navbar-collapse collapse" id="navbar">
           <ul class="nav navbar-nav">
             <li>
