--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,23 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Contact</title>
-
-    {% load staticfiles %}
-    <script src="{% static 'js/bootstrap.js' %}"> </script>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
-    <div id="menu">
-        <ul class="nav nav-pills">
-            <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
-            <li role="presentation"  class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-            <li role="presentation"> <a href="{% url 'students:list_view'%}">Students</a></li>
-        </ul>
-    </div>
-
+{% extends 'base.html' %}
+{% block title %}Contacts{% endblock %}
+{% block active_menu_contacts %}active{% endblock %}
+{% block content %}
     <div class="panel panel-default">
         <div class="panel-heading">
             <h2 class="panel-title">Director</h2>
@@ -50,6 +34,4 @@
         </ul>
     </div>
 
-
-</body>
-</html>
+{% endblock %}
