--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Courses info</title>
-    {% load staticfiles %}
-    <script src="{% static 'js/bootstrap.js' %}"> </script>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Courses info{% endblock %}
+
+{% block menu %}
     <div id="menu">
         <ul class="nav nav-pills">
             <li><a href="{% url 'index' %}">Main</a></li>
@@ -16,9 +9,11 @@
             <li><a href="{% url 'students:list_view'%}?course_id={{ item.id }}">Students</a></li>
         </ul>
     </div>
+{% endblock %}
+{% block content %}
     <div class="jumbotron">
         <h1 class="center">{{ item.name }}</h1>
-        <p class="center"> {{ item.description }}</p>
+        <p class="center"> {{ item.description|truncatechars:32 }}</p>
     </div>
         <table class="table">
             <tr>
@@ -28,9 +23,9 @@
             </tr>
             {% for less in lesson %}
             <tr>
-                <td> {{ less.order }} </td>
-                <td> {{ less.subject }}</td>
-                <td> {{ less.description }} </td>
+                <td>{{ less.order }}</td>
+                <td>{{ less.subject }}</td>
+                <td>{{ less.description }}</td>
             </tr>
             {% endfor %}
         </table>
@@ -57,12 +52,4 @@
             </div>
         </div>
     {% endfor %}
-
-
-
-
-
-
-    </div>
-</body>
-</html>
+{% endblock %}
