--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,22 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Student detail</title>
-    {% load staticfiles %}
-    <script src="{% static 'js/bootstrap.js' %}"> </script>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
-    <div id="menu">
-        <ul class="nav nav-pills">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-        </ul>
-    </div>
-     <div class="jumbotron">
+{% extends 'base.html' %}
+{% block title %}Student detail{% endblock %}
+{% block active_menu_students %}active{% endblock %}
+{% block content %}
+    <div class="jumbotron">
         <h2 class="center">{{ student.name }} {{ student.surname }}</h2>
     </div>
     <table class="table">
@@ -41,5 +27,4 @@
             </td>
         </tr>
     </table>
-</body>
-</html>
+{% endblock %}
