--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,21 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Students</title>
-    {% load staticfiles %}
-    <script src="{% static 'js/bootstrap.js' %}"> </script>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
-    <div id="menu">
-        <ul class="nav nav-pills">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-        </ul>
-    </div>
+{% extends 'base.html' %}
+{% block title %}Students{% endblock %}
+{% block active_menu_students %}active{% endblock %}
+{% block content %}
     <div class="jumbotron">
         <h1 class="center">Students list</h1>
     </div>
@@ -42,5 +28,4 @@
             </tr>
             {% endfor %}
     </table>
-</body>
-</html>
+{% endblock %}
