change app quadratic

--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -33,33 +33,43 @@
                 </form>
                
                 <ul>
+                    {# coefficient a #}
                     <li> a = {{ a }}</li>
                     {% if a_type == 'string' and a == '' %}
-                    <p>коэффициент не определен</p>
+                        <p>коэффициент не определен</p>
                     {% elif a_type == 'string' and a != '' %}
-                    <p>коэффициент не целое число</p>
+                        <p>коэффициент не целое число</p>
                     {% elif a_type == 'integer' and a == 0 %}
-                    <p>коэффициент при первом слагаемом уравнения не может быть равным нулю</p>
+                        <p>коэффициент при первом слагаемом уравнения не может быть равным нулю</p>
                     {% endif %}
+
+                    {# coefficient b #}
                     <li> b = {{ b }}</li>
                     {% if b_type == 'string' and b == '' %}
-                    <p>коэффициент не определен</p>
+                        <p>коэффициент не определен</p>
                     {% elif b_type == 'string' and b != '' %}
-                    <p>коэффициент не целое число</p>
+                        <p>коэффициент не целое число</p>
                     {% endif %}
+
+                    {# coefficient c #}
                     <li> c = {{ c }}</li>
                     {% if c_type == 'string' and c == '' %}
-                    <p>коэффициент не определен</p>
+                        <p>коэффициент не определен</p>
                     {% elif c_type == 'string' and c != '' %}
-                    <p>коэффициент не целое число</p>
+                        <p>коэффициент не целое число</p>
                     {% endif %}
                 </ul>
                 {% if disrcim != '' %}
-                <h4>Дискриминант: {{ disrcim }}</h4> {% if disrcim > 0 %}
-                <h5>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</h5> {% elif disrcim == 0 %}
-                <h5>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}</h5> {% elif disrcim
-                < 0 %} <h5>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</h5>
-                    {% endif %} {% endif %}
+                    {# discrim != '' #}
+                    <h4>Дискриминант: {{ disrcim }}</h4> 
+                    {% if disrcim > 0 %}
+                        <h5>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</h5> 
+                    {% elif disrcim == 0 %}
+                        <h5>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}</h5> 
+                    {% elif disrcim < 0 %} 
+                        <h5>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</h5>
+                    {% endif %} 
+                {% endif %}
             </div>
         </div>
     </div>
